force-app/main/default/objects/Retail_Upload_Shipment_tracking_Info__c/Retail_Upload_Shipment_tracking_Info__c.object-meta.xml
<CustomObject>
    <label>Retail Upload Shipment tracking Info</label>
    <nameField>
        <displayFormat>RSN-{0000}</displayFormat>
        <label>Shipment tracking Info No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Upload Shipment tracking Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>