force-app/main/default/objects/Retail_Upload_Shipment_tracking_Info__c/fields/Customer_s_Prefered_Transport_Company__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Prefered_Transport_Company__c</fullName>
    <label>Customer&apos;s Prefered Transport Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>