force-app/main/default/objects/Retail_Upload_Shipment_tracking_Info__c/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Dispatch Date</label>
    <type>Date</type>
</CustomField>