force-app/main/default/objects/Retail_Upload_Shipment_tracking_Info__c/fields/Has_Been_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Dispatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Dispatched?</label>
    <type>Checkbox</type>
</CustomField>