force-app/main/default/objects/Retail_Upload_Shipment_tracking_Info__c/fields/Other_Transport_Company__c.field-meta.xml
<CustomField>
    <fullName>Other_Transport_Company__c</fullName>
    <label>Other Transport Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>