force-app/main/default/objects/Retail_Upload_Shipment_tracking_Info__c/validationRules/Dispatch_should_not_be_further_thn_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Dispatch_should_not_be_further_thn_Today</fullName>
    <active>false</active>
    <errorConditionFormula>Dispatch_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Dispatch_Date__c</errorDisplayField>
    <errorMessage>Please enter a dispatch date that is not a future date!</errorMessage>
</ValidationRule>