force-app/main/default/objects/Retail_Upload_Shipment_tracking_Info__c/validationRules/Phone_Number_10_digit_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_10_digit_validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(ISBLANK(	Driver_Phone_Number__c), REGEX(	Driver_Phone_Number__c, &quot;^[0-9]{10}$&quot;)))</errorConditionFormula>
    <errorMessage>Phone number must be 10 digits long.</errorMessage>
</ValidationRule>